<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TestResultsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_bar_layout_margin_start"
        android:layout_marginTop="@dimen/common_margin_20"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background"
            app:title="@string/test_result"
            app:titleTextAppearance="@style/style_bar_test_result" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/common_margin_20"
        android:layout_marginTop="@dimen/common_margin_10"
        android:layout_marginBottom="@dimen/common_margin_20"
        app:cardCornerRadius="@dimen/icon_card_view_corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin_10"
                android:maxLines="2"
                android:text="@string/count_correct_answers"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/all_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin_10"
                android:text="@string/all_count_answer"
                app:layout_constraintBottom_toTopOf="@id/progress_indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/all_answers"
                app:layout_constraintEnd_toStartOf="@id/all_answers"
                app:layout_constraintTop_toTopOf="@id/all_answers" />

            <TextView
                android:id="@+id/count_correct_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19"
                app:layout_constraintBottom_toBottomOf="@id/all_answers"
                app:layout_constraintEnd_toStartOf="@id/separator"
                app:layout_constraintTop_toTopOf="@id/all_answers" />

            <ProgressBar
                android:id="@+id/progress_indicator"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="70dp"
                android:layout_height="6dp"
                android:progress="50"
                android:progressBackgroundTint="@color/light_grey"
                android:progressTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/all_answers"
                app:layout_constraintTop_toBottomOf="@id/all_answers" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/my_mistakes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/common_margin_20"
        android:layout_marginBottom="@dimen/common_margin_10"
        app:cardCornerRadius="@dimen/icon_card_view_corner_radius">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_mistakes" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/repeat_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/common_margin_20"
        android:layout_marginBottom="@dimen/common_margin_10"
        app:cardCornerRadius="@dimen/icon_card_view_corner_radius">

        <TextView
            android:id="@+id/button_repeat_test"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/repeat_test" />

    </androidx.cardview.widget.CardView>

</LinearLayout>